# Lapes-Eye-Linux

./: CMakeLists.txt  README.md  ROADMAP.md  build.sh  debug.sh  run.sh
.github/: FUNDING.yml
.github/workflow/: release.yml
.github/workflows/: release.yml
include/LapesEye/core/: CameraProfiles.h  Collection.h  ColorManagement.h  FileScanner.h  LapeIPC.h  MetaStore.h  PerfTimer.h  SonyILCE7M3Profile.h  ThumbCache.h
include/LapesEye/ui/: AdvancedSearchDialog.h  BatchRenameDialog.h  BreadcrumbBar.h  CollectionDialog.h  ColorLabelEditor.h  CompareView.h  ExportDialog.h  FilterBar.h  FolderPanel.h  FullscreenViewer.h  HistogramWidget.h  MainWindow.h  MetaPanel.h  PreviewPanel.h  PrintDialog.h  RubberOverlay.h  SettingsDialog.h  TearOffTabBar.h  ThumbnailCanvas.h  ThumbnailGrid.h  ThumbnailItem.h
include/LapesEye/workers/: ScanWorker.h  ThumbWorker.h
resources/: lapes-eye.desktop  lapes-eye.rc.in  resources.qrc
src/: main.cpp
src/core/: CameraProfiles.cpp  Collection.cpp  ColorManagement.cpp  FileScanner.cpp  LapeIPC.cpp  MetaStore.cpp  SonyILCE7M3Profile.cpp  ThumbCache.cpp
src/ui/: AdvancedSearchDialog.cpp  BatchRenameDialog.cpp  BreadcrumbBar.cpp  CollectionDialog.cpp  ColorLabelEditor.cpp  CompareView.cpp  ExportDialog.cpp  FilterBar.cpp  FolderPanel.cpp  FullscreenViewer.cpp  HistogramWidget.cpp  MainWindow.cpp  MetaPanel.cpp  PreviewPanel.cpp  PrintDialog.cpp  RubberOverlay.cpp  SettingsDialog.cpp  TearOffTabBar.cpp  ThumbnailCanvas.cpp  ThumbnailGrid.cpp  ThumbnailItem.cpp
src/workers/: ScanWorker.cpp  ThumbWorker.cpp
